# JDK-Selector

./: .gitignore  3rdpartylicenses.txt  Cargo.toml  README.md
jdk_selector_builder/: Cargo.toml
jdk_selector_builder/src/: main.rs
jdk_selector_builder/src/models/: config.rs  executor_info.rs  mod.rs
jdk_selector_builder/src/utils/: config_loader.rs
jdk_selector_builder/static/: config.json
jdk_selector_cli/: Cargo.toml
jdk_selector_cli/src/: main.rs
jdk_selector_executor/: Cargo.toml
jdk_selector_executor/src/: main.rs
jdk_selector_installer/linux/: .gitignore  Cargo.toml
jdk_selector_installer/linux/src/: main.rs
jdk_selector_installer/windows/: setup.iss
jdk_selector_shared/: Cargo.toml
jdk_selector_shared/src/: lib.rs
jdk_selector_shared/src/models/: config.rs  jdk_info.rs  mod.rs
jdk_selector_shared/src/utils/: config_loader.rs
