[package]
name = "jdk_selector_executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "4.0.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
jdk_selector_shared = { path = "../jdk_selector_shared" }
