[package]
name = "jdk_selector_shared"
authors = ["Seungwoo Yu <seungwoyu2000@gmail.com>"]
license = "Apache-2.0 OR MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "4.0.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"